[UPDATE] Validated quantity input on crate.html, checkout form, fixed nav highlights and supplies buttons on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,14 +30,14 @@ p { color: #eee6e6; margin-bottom: 0; }
 
 /* Images */
 .supply-img, .manage-img { border: 5px solid #ffd700; width: 100%; -o-object-fit:cover; object-fit:cover; -webkit-box-shadow: 2px 2px #141414; box-shadow: 2px 2px #141414; }
-.img-btn-supplies { height: 12vh; }
+.img-btn-supplies { height: 10vh; }
 
 /* Containers */
 .container-content { margin-top: 16vh; }
 .container-sort .navbar-toggler { padding: 0.5rem 1rem; -webkit-box-shadow: none; box-shadow: none; font-size: 1rem; }
 .container-categories { border-top: 0; }
 .container-search, .container-toasts { background-color: #4169e1;}
-.container-buttons { position: fixed; bottom: 14vh; right: 10px; z-index: 999999999; width: 20%; }
+.container-buttons { position: fixed; bottom: 14vh; right: 50px; z-index: 999999999; width: 10%; }
 .container-messages { position: fixed; z-index: 99999999999; bottom: 14vh; left: -4px; width: 100%; }
 
 /* Nav */
@@ -68,7 +68,7 @@ footer i, .text-footer { font-size: 1.6rem; }
 /* Supplies */
 .title-sort:hover, .title-sort:focus { color: #ffd700; border: none; }
 ul { padding: 0 1rem 0 0; list-style: none; text-align: right; }
-.nav-link.active, .nav-link:hover, .nav-tabs .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover { border: none; width: -webkit-max-content; width: -moz-max-content; width: max-content; }
+.nav-link.active, .nav-link:hover, .nav-tabs .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover { border: none; width: 100%; }
 .nav-link.active, .nav-link:hover, .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover, .title-sort.active, .link-sort:hover { background-color: #ffd700; color: #4169e1; text-shadow: 2px 2px #eee6e6; border-bottom: 0; }
 /* Credit for w3schools: Remove arrows/spinners on Chrome, Safari, Opera, Edge and Firefox */
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
@@ -161,4 +161,8 @@ input[type=number] { -moz-appearance: textfield; }
     .container-categories p { font-size: 1.5rem; }
     .container-messages { width: 25%; }
     .header-links { font-size: 1.5rem; }
+    .nav-link.active, .nav-link:hover, .nav-tabs .nav-link,
+    .nav-tabs .nav-link.active, .nav-tabs .nav-link:hover {
+        width: -webkit-max-content; width: -moz-max-content; width: max-content;
+    }
 }
